--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,240 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Uber Eats</title>
   <link href="main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <h1>Starter Template</h1>
+<header class="header">
+  <div class="header__container wrapper">
+    <div class="logo">
+      <img class="header__logo" src="img/logo.svg" alt="logo uber eats">
+    </div>
+    <div class="delivery">
+      <a href="#" class="delivery__time">
+        <p class="time-p">ASAP</p>
+      </a>
+      <p class="delivery-p">to</p>
+      <div class="delivery__address">
+        <lebel>
+          <label>
+            <input class="delivery__address-input" type="text" placeholder="Enter your address" size="18">
+          </label>
+        </lebel>
+      </div>
+    </div>
+    <div class="button_container">
+      <div class="activation">
+        <a href="#" class="sing-in">Sign In</a>
+        <a href="#" class="register">Register</a>
+      </div>
+      <a href="#" class="basket">
+        <img src="img/basket.svg" alt="basket">
+      </a>
+    </div>
+  </div>
+</header>
+<main class="main wrapper">
+  <section class="search">
+    <form class="search__form" action="#">
+      <img src="img/Shape.svg" alt="">
+      <label class="search__label">
+        <input class="search__form-input" type="text" placeholder="Search for restaurant or cuisine">
+      </label>
+    </form>
+  </section>
+  <h1 class="main-h1">Kyiv Restaurants</h1>
+  <article class="main__container">
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/mcdonald.png" alt="mcdonald">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">Макдоналдс</h2>
+          <span class="text-span">Бургеры</span>
+          <p class="text-p">25 - 35 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/wakwei.png" alt="wokwei">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">WOKWEI</h2>
+          <span class="text-span">Китайська • Азіатська</span>
+          <p class="text-p">40 - 50 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/yizha.png" alt="yizha">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">YIZHA</h2>
+          <span class="text-span">Американська • Бургери • Вулична їжа</span>
+          <p class="text-p">35 - 45 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/Musafir.png" alt="Musafir">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">Musafir (вул. Саксаганського)</h2>
+          <span class="text-span">Близькосхідна</span>
+          <p class="text-p">30 - 40 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/wakwei2.png" alt="wokwei">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">WOKWEI</h2>
+          <span class="text-span">Китайська • Азіатська</span>
+          <p class="text-p">40 - 50 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/Milk.png" alt="Milk Bar">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">Milk Bar</h2>
+          <span class="text-span">Десерти • Європейська</span>
+          <p class="text-p">25 - 35 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/Mimosa.png" alt="Mimosa Brooklyn Pizza">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">Mimosa Brooklyn Pizza</h2>
+          <span class="text-span">Італійська • Піца • Американська</span>
+          <p class="text-p">15 - 25 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/to-be.png" alt="to be">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">To Be</h2>
+          <span class="text-span">Японська • Азіатська • Суші</span>
+          <p class="text-p">25 - 35 Min</p>
+        </div>
+      </a>
+    </section>
+    <section class="cart wrap">
+      <a class="cart-a" href="#">
+        <div class="cart__foto">
+          <img class="cart__img" src="img/Druzi.png" alt="Druzi">
+        </div>
+        <div class="cart__text">
+          <h2 class="text-h2">Druzi Cafe (вул. Прорізна)</h2>
+          <span class="text-span">Американська • Сучасна європейська • Українська</span>
+          <p class="text-p">30 - 40 Min</p>
+        </div>
+      </a>
+    </section>
+  </article>
+</main>
+<footer class="footer">
+  <div class="footer__container wrapper">
+    <div class="logo logo-footer">
+      <img class="footer__logo" src="img/logo.svg" alt="logo uber eats">
+    </div>
+    <div class="line"></div>
+    <div class="column-container">
+      <div class="column">
+        <div class="wrap-select">
+          <div class="img-select">
+            <img src="img/world.svg" alt="world">
+          </div>
+          <form action="">
+            <p>
+              <select class="column-select" name="languages">
+                <option value="DEUTSCH" class="option">DEUTSCH</option>
+                <option value="ENGLISH" class="option" selected>ENGLISH</option>
+                <option value="PУССКИЙ" class="option">PУССКИЙ</option>
+                <option value="УКРАЇНСЬКА МОВА" class="option">УКРАЇНСЬКА МОВА</option>
+              </select>
+            </p>
+          </form>
+        </div>
+        <a class="networks-a" href="#">
+          <span class="footer-span">UberEats</span>
+        </a>
+        <div class="networks">
+          <a class="networks-a" href="#"><img class="networks-img" src="img/facebook.svg" alt="facebook"></a>
+          <a class="networks-a" href="#"><img class="networks-img" src="img/twitter.svg" alt="twitter"></a>
+          <a class="networks-a" href="#"><img class="networks-img" src="img/instagram.svg" alt="instagram"></a>
+        </div>
+      </div>
+      <div class="column">
+        <ul class="footer-column-ul">
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">About UberEats</a></li>
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">Become a Delivery Partner</a></li>
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">Become a Restaurant Partner</a></li>
+        </ul>
+      </div>
+      <div class="column">
+        <ul class="footer-column-ul">
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">See all cities</a></li>
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">Pricing</a></li>
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">Help</a></li>
+          <li class="footer__ul-li"><a class="footer__ul-a" href="#">FAQs</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="line"></div>
+    <div class="button">
+      <a class="a-button-text" href="https://support.apple.com">
+        <div class="a-button">
+          <div class="img-apple"></div>
+          <div class="button-text">
+            <p class="p-button">Download on the </p>
+            <h5 class="h5-app">App Store</h5>
+          </div>
+        </div>
+      </a>
+      <a class="a-button-text" href="https://play.google.com">
+        <div class="a-button">
+          <div class="img-google"></div>
+          <div class="button-text">
+            <p class="p-button">Download on </p>
+            <h5 class="h5-google">Google <span class="span-google">play</span></h5>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="line"></div>
+    <div class="column-container">
+      <div class="column"><p class="column-p">2019 Uber Technologies Inc.</p></div>
+      <div class="column row-column"><a href="#" class="column-a">Privacy</a></div>
+      <div class="column row-column"><a href="#" class="column-a">Terms</a></div>
+    </div>
+  </div>
+  <a class="footer__up" href="#">
+    <img img-up src="img/up.svg" alt="up">
+  </a>
+</footer>
 </body>
 </html>
