--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   <h1 class="main-h1">Kyiv Restaurants</h1>
   <article class="main__container">
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/mcdonald.png" alt="mcdonald">
         </div>
@@ -60,7 +60,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/wakwei.png" alt="wokwei">
         </div>
@@ -72,7 +72,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/yizha.png" alt="yizha">
         </div>
@@ -84,7 +84,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/Musafir.png" alt="Musafir">
         </div>
@@ -96,7 +96,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/wakwei2.png" alt="wokwei">
         </div>
@@ -108,7 +108,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/Milk.png" alt="Milk Bar">
         </div>
@@ -120,7 +120,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/Mimosa.png" alt="Mimosa Brooklyn Pizza">
         </div>
@@ -132,7 +132,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/to-be.png" alt="to be">
         </div>
@@ -144,7 +144,7 @@
       </a>
     </section>
     <section class="cart wrap">
-      <a class="cart-a" href="#">
+      <a class="cart-a" href="restaurant.html">
         <div class="cart__foto">
           <img class="cart__img" src="img/Druzi.png" alt="Druzi">
         </div>
